--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@ node_modules/
 .expo/
 dist/
 web-build/
+build/
 expo-env.d.ts
 
 # Native
@@ -39,3 +40,5 @@ yarn-error.*
 # generated native folders
 /ios
 /android
+
+.vscode/
